@@ -4,7 +4,7 @@ Copyright (C) 2005-2011 GanttProject team
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
-as published by the Free Software Foundation; either version 2
+as published by the Free Software Foundation; either version 3
 of the License, or (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
@@ -19,31 +19,31 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 package net.sourceforge.ganttproject.gui;
 
 import java.awt.event.ActionEvent;
+import java.beans.PropertyChangeEvent;
+import java.beans.PropertyChangeListener;
 import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.Timer;
 import java.util.TimerTask;
 
-import javax.swing.AbstractAction;
 import javax.swing.Action;
-import javax.swing.Box;
-import javax.swing.BoxLayout;
 import javax.swing.JButton;
 import javax.swing.JFileChooser;
 import javax.swing.JPanel;
 import javax.swing.JTextField;
+import javax.swing.SpringLayout;
 import javax.swing.SwingUtilities;
 import javax.swing.event.DocumentEvent;
 import javax.swing.event.DocumentListener;
 import javax.swing.filechooser.FileFilter;
 
-import org.eclipse.core.runtime.IStatus;
-
 import net.sourceforge.ganttproject.GPLogger;
 import net.sourceforge.ganttproject.action.CancelAction;
+import net.sourceforge.ganttproject.action.GPAction;
 import net.sourceforge.ganttproject.action.OkAction;
-import net.sourceforge.ganttproject.language.GanttLanguage;
+
+import org.eclipse.core.runtime.IStatus;
 
 /**
  * @author bard
@@ -63,15 +63,18 @@ public abstract class TextFieldAndFileChooserComponent extends JPanel {
 
     private boolean myProcessTextEventEnabled = true;
 
+    private final SpringLayout myLayout = new SpringLayout();
+
     private final UIFacade myUiFacade;
 
     public TextFieldAndFileChooserComponent(UIFacade uiFacade, String label, String dialogCaption) {
         myUiFacade = uiFacade;
         myDialogCaption = dialogCaption;
 
-        setLayout(new BoxLayout(this, BoxLayout.LINE_AXIS));
+        setLayout(myLayout);
 
-        myChooserButton = new JButton(new AbstractAction(GanttLanguage.getInstance().getText("fileChooser.browse")) {
+        myChooserButton = new JButton(new GPAction("fileChooser.browse") {
+            @Override
             public void actionPerformed(ActionEvent e) {
                 showFileChooser();
             }
@@ -83,12 +86,15 @@ public abstract class TextFieldAndFileChooserComponent extends JPanel {
             private final Timer myTimer = new Timer();
             private TimerTask myTimerTask = null;
 
+            @Override
             public void removeUpdate(DocumentEvent e) {
                 onChange();
             }
+            @Override
             public void insertUpdate(DocumentEvent e) {
                 onChange();
             }
+            @Override
             public void changedUpdate(DocumentEvent arg0) {
                 onChange();
             }
@@ -98,6 +104,7 @@ public abstract class TextFieldAndFileChooserComponent extends JPanel {
                         @Override
                         public void run() {
                             SwingUtilities.invokeLater(new Runnable() {
+                                @Override
                                 public void run() {
                                     tryFile();
                                 }
@@ -110,9 +117,19 @@ public abstract class TextFieldAndFileChooserComponent extends JPanel {
             }
         });
 
+        //myChooserPanel = new JPanel(new BorderLayout());
         add(myTextField);
-        add(Box.createHorizontalStrut(3));
         add(myChooserButton);
+        //add(myChooserPanel);
+        myLayout.putConstraint(SpringLayout.WEST, myTextField, 0, SpringLayout.WEST, this);
+        myLayout.putConstraint(SpringLayout.NORTH, myTextField, 0, SpringLayout.NORTH, this);
+        myLayout.putConstraint(SpringLayout.WEST, myChooserButton, 3, SpringLayout.EAST, myTextField);
+        myLayout.putConstraint(SpringLayout.NORTH, myChooserButton, 0, SpringLayout.NORTH, this);
+        myLayout.putConstraint(SpringLayout.EAST, this, 0, SpringLayout.EAST, myChooserButton);
+//        myLayout.putConstraint(SpringLayout.NORTH, myChooserPanel, 3, SpringLayout.SOUTH, myChooserButton);
+//        myLayout.putConstraint(SpringLayout.WEST, myChooserPanel, 0, SpringLayout.WEST, myTextField);
+//        myLayout.putConstraint(SpringLayout.EAST, myChooserPanel, 0, SpringLayout.EAST, myChooserButton);
+        myLayout.putConstraint(SpringLayout.SOUTH, this, 0, SpringLayout.SOUTH, myChooserButton);
     }
 
     public File getFile() {
@@ -127,26 +144,52 @@ public abstract class TextFieldAndFileChooserComponent extends JPanel {
      */
     public void setFile(File file) {
         if(file == null) {
-            // Empty the files
-            myFile = null;
-            myTextField.setText("");
+            return;
         }
 
         if(file.isDirectory()) {
             // Add previously used file name because we need/like to select files
-            myFile = new File(file, myFile.getName());
+            myFile = new File(file, (myFile == null ? "out" : myFile.getName()));
         } else {
             myFile = file;
         }
-        myTextField.setText(file.getAbsolutePath());
+        if (myProcessTextEventEnabled) {
+            myTextField.setText(file.getAbsolutePath());
+        }
     }
 
     public void setFileFilter(FileFilter filter) {
         myFileFilter = filter;
     }
 
+//    public void setChooserHeight(int height) {
+//        Rectangle bounds = myChooserPanel.getBounds();
+//        myChooserPanel.setMinimumSize(new Dimension(bounds.width, height));
+//        myChooserPanel.setMaximumSize(new Dimension(bounds.width, height));
+//        myChooserPanel.setPreferredSize(new Dimension(bounds.width, height));
+//        this.doLayout();
+//        myChooserPanel.doLayout();
+//        myWizard.getDialog().layout();
+//    }
+
+//    public int getChooserHeight() {
+//        return getHeight();
+//    }
+
+//    protected void hideFileChooser() {
+//        Timeline t = new Timeline(this);
+//        t.addPropertyToInterpolate("chooserHeight", 0, myChooserPanel.getHeight());
+//        t.playReverse();
+//        myChooserPanel.removeAll();
+//        myFileChooser = null;
+//    }
+
+
     public void showFileChooser() {
         final JFileChooser fc = new JFileChooser(new File(myTextField.getText()));
+
+        File selectedFile = getFile();
+        fc.setCurrentDirectory(selectedFile == null ? getWorkingDir() : selectedFile.getParentFile());
         fc.setDialogTitle(myDialogCaption);
         fc.setControlButtonsAreShown(false);
         fc.setApproveButtonToolTipText(myDialogCaption);
@@ -159,7 +202,22 @@ public abstract class TextFieldAndFileChooserComponent extends JPanel {
         }
 
         fc.addChoosableFileFilter(myFileFilter);
+        fc.doLayout();
 
+        fc.addPropertyChangeListener(JFileChooser.SELECTED_FILE_CHANGED_PROPERTY, new PropertyChangeListener() {
+            @Override
+            public void propertyChange(PropertyChangeEvent evt) {
+                File f = (File) evt.getNewValue();
+                if (f != null) {
+                    setFile(f);
+                }
+            }
+        });
+//        myChooserPanel.add(fc, BorderLayout.CENTER);
+//        Timeline t = new Timeline(this);
+//        t.addPropertyToInterpolate("chooserHeight", 0, fc.getPreferredSize().height);
+//        t.play();
+//        myFileChooser = fc;
         Action[] dialogActions = new Action[] { new OkAction() {
             @Override
             public void actionPerformed(ActionEvent e) {
@@ -168,6 +226,10 @@ public abstract class TextFieldAndFileChooserComponent extends JPanel {
             }
         }, CancelAction.EMPTY };
         myUiFacade.createDialog(fc, dialogActions, "").show();
+    }
+
+    private File getWorkingDir() {
+        return new File(System.getProperty("user.dir"));
     }
 
     public void tryFile() {
@@ -184,7 +246,7 @@ public abstract class TextFieldAndFileChooserComponent extends JPanel {
 
     public URL getSelectedURL() {
         try {
-            return new URL("file://" + myTextField.getText());
+            return myFile == null ? new URL("file://" + myTextField.getText()) : myFile.toURI().toURL();
         } catch (MalformedURLException e) {
             GPLogger.log(e);
             return null;
